force-app/main/default/objects/FieloCH__AsynchProcess__c/FieloCH__AsynchProcess__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Asynchronous Process</label>
</CustomObject>