force-app/main/default/objects/FieloCH__AsynchProcess__c/fields/FieloCH__GlobalFilter__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__GlobalFilter__c</fullName>
    <inlineHelpText>Global challenges could add a lot of unnecessary processing. In order to avoid the segmentation overhead, this filter is a pre-segmentation that match fields from the Challenge and the Member. For example country</inlineHelpText>
    <label>GlobalFilter</label>
    <length>120</length>
    <type>Text</type>
</CustomField>