force-app/main/default/objects/FieloCH__AsynchProcess__c/fields/FieloCH__Prefilter__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__Prefilter__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>When checked, a Badge Member should be part of the document BADGESFILTER to be processed</inlineHelpText>
    <label>Prefilter</label>
    <type>Checkbox</type>
</CustomField>