force-app/main/default/objects/FieloCH__AsynchProcess__c/fields/FieloCH__SubscriptionTimeUnit__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__SubscriptionTimeUnit__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Estimated time to process a challenge member (in milliseconds - ms). It ranges from null to 10,000 ms, when null is a complete synchronous process and 10,000 is completely asynchronously.</inlineHelpText>
    <label>SubscriptionTimeUnit</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>